--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg mx-auto px-5 md:px-0">
     <header>
         <div class="navbar bg-base-100">
             <div class="navbar-start">
@@ -17,13 +17,14 @@
                 </div>
                 <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
                   <li><a>Homepage</a></li>
-                  <li><a>Portfolio</a></li>
+                  <li><a>Profile</a></li>
                   <li><a>About</a></li>
                 </ul>
               </div>
             </div>
             <div class="navbar-center">
               <a class="btn btn-ghost font-semibold text-6xl">Mobile Hub.Com</a>
+              <p class="text-center">Develop by Moniruzzaman</p>
             </div>
             <div class="navbar-end">
               <button class="btn btn-ghost btn-circle">
@@ -52,7 +53,7 @@
                 <span class="loading loading-bars loading-lg"></span>
             </div>
 
-            <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <div id="phone-container" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
                 
             </div>
              <!-- see more button  -->
